# ent/migrate/schema.go
@@ -296,6 +296,7 @@ var (
 		{Name: "updated_at", Type: field.TypeTime, Nullable: true},
 		{Name: "expires_at", Type: field.TypeTime},
 		{Name: "err_msg", Type: field.TypeString, Nullable: true},
+		{Name: "message_id", Type: field.TypeString, Nullable: true},
 	}
 	// MsgNlogTable holds the schema information for the "msg_nlog" table.
 	MsgNlogTable = &schema.Table{
